--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-theme: jekyll-theme-minimal
 include:
 - gx
 - nadyezhdaslone
@@ -17,3 +16,6 @@ author:
     url: https://github.com/twardoch/
     email: adam+github@twardoch.com
 version: 1.0.0
+
+encoding: utf-8
+#theme: jekyll-theme-minimal
